--- a/index.html
+++ b/index.html
@@ -9,13 +9,40 @@
 </head>
 
 <body>
-  Hello world
+  <div class="BigBox"> 
+  
+  
+<div id="left"> 
+  <h1>Cats </h1>
+  <p>Cats are lazy</p>
+  <p>Not playful</p>
+  <p>Like to scratch a lot</p>
+  <p>A lot of cat hair</p>
+  <p>Destroy furniture</p>
+</div>
+  
+  <div id="middle"> 
+    <h2>Similarites</h2>
+    <p>Territorial</p>
+    <p>Affectionate</p>
+    <p>Intelligent</p>
+    <p>Domestic animals</p>
+    <p>Four legs</p>
+  </div>
+
+
+
+  <div id="right">
+    <h2>Dogs</h2>
+    <p>Dogs are cuddly</p>
+    <p>Dogs are playful</p>
+    <p>Dogs are easy to get along with</p>
+    <p>Dogs are protective</p>
+    <p>Dogs sleep all day making it easy for you</p>
+  </div>
+  </div>
   <script src="script.js"></script>
 
- <!--
-This script places a badge on your repl's full-browser view back to your repl's cover page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green, teal, blue, blurple, magenta, pink!
--->
-<script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script> 
-</body>
 
+</body>
 </html>
